# water-quality-classification

./: main.py  pyproject.toml
experiments/: classifications.ipynb  notebook.ipynb
